# Heimdall

./: Cargo.toml
.github/workflows/: audit.yml  general.yml
docs/: schema.md
migrations/postgres/: 20250320172724_initial_pg_schema.down.sql  20250320172724_initial_pg_schema.up.sql
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs  server.rs
src/state/: mod.rs
